--- a/templates/receive_mr.html
+++ b/templates/receive_mr.html
@@ -146,15 +146,33 @@ document.addEventListener('DOMContentLoaded', function () {
             const response = await fetch(`/api/material-receipts/mr-details/${reqId}`);
             if (!response.ok) throw new Error('Failed to fetch MR details.');
             const details = await response.json();
-            
+
+            let itemsHtml = `
+                <table class="table table-sm table-borderless">
+                    <tbody>
+            `;
+            details.items.forEach(item => {
+                itemsHtml += `
+                    <tr>
+                        <td>${item.name}</td>
+                        <td class="text-end"><strong>${parseFloat(item.quantity).toFixed(2)}</strong> ${item.unit}</td>
+                    </tr>
+                `;
+            });
+            itemsHtml += `
+                    </tbody>
+                </table>
+            `;
+
             mrDetailsContainer.innerHTML = `
                 <dl class="row mb-0">
                     <dt class="col-sm-5">Material Type</dt><dd class="col-sm-7">${details.material_type}</dd>
                     <dt class="col-sm-5">Supplier</dt><dd class="col-sm-7">${details.supplier}</dd>
                     <dt class="col-sm-5">LPO Number</dt><dd class="col-sm-7">${details.lpo_number}</dd>
-                    <dt class="col-sm-12 mt-2">Materials & Quantity</dt>
-                    <dd class="col-sm-12"><pre style="white-space: pre-wrap; font-size: 0.9em;">${details.material_with_quantity}</pre></dd>
                 </dl>
+                <hr class="my-2">
+                <h6 class="mb-2">Materials & Quantity</h6>
+                ${itemsHtml}
             `;
         } catch (error) {
             console.error(error);
