security and change password done

--- a/templates/login.html
+++ b/templates/login.html
@@ -69,7 +69,7 @@
             
         </form>
         <p id="message-area" class="message error"></p>
-        <p class="message">Don't have an account? <a href="/register">Sign up</a></p>
+        <!-- <p class="message">Don't have an account? <a href="/register">Sign up</a></p> -->
     </div>
 
     <script>
