--- a/templates/requisition_details.html
+++ b/templates/requisition_details.html
@@ -92,7 +92,7 @@
                              <dt class="col-sm-5">PM Approval</dt>
                              <dd class="col-sm-7" id="pm-approval"></dd>
                              
-                             <dt class="col-sm-5">QS Approval</dt>
+                             <dt class="col-sm-5">Commercial Approval</dt>
                              <dd class="col-sm-7" id="qs-approval"></dd>
 
                              <hr class="my-3">
